--- a/zadanie_rozmyte/Liczby.xaml
+++ b/zadanie_rozmyte/Liczby.xaml
@@ -5,16 +5,16 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:zadanie_rozmyte"
         mc:Ignorable="d"
-        Title="Liczby" Height="601" Width="450">
+        Title="Liczby" Height="766" Width="450">
     <Grid>
-        <ScrollViewer x:Name="viewer" Margin="0,53,0,362" />
+        <ScrollViewer x:Name="viewer" Margin="0,53,0,527" />
         <TextBlock HorizontalAlignment="Center" Height="40" TextWrapping="Wrap" VerticalAlignment="Top" Width="430" FontSize="36"><Run Language="pl-pl" Text="NAZWA"/><Run Text=" : "/><Run Language="pl-pl" Text="LICZBA"/></TextBlock>
         <TextBlock HorizontalAlignment="Center" Height="31" Margin="0,228,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430" FontSize="18"><Run Language="pl-pl" Text="Wpisz działanie:"/></TextBlock>
         <TextBox x:Name="dzialanie1" HorizontalAlignment="Center" Height="30" Margin="0,259,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430" FontSize="20" />
-        <TextBlock x:Name="errors2" HorizontalAlignment="Center" Height="31" Margin="0,341,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430"/>
-        <Button Content="Wykonaj" HorizontalAlignment="Center" Height="42" Margin="0,294,0,0" VerticalAlignment="Top" Width="430" Click="Button_Click" FontSize="20"/>
-        <TextBlock HorizontalAlignment="Center" Height="24" Margin="0,372,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430" FontSize="18"><Run Text="Sprawdź prz"/><Run Language="pl-pl" Text="y"/><Run Text="należność"/><Run Text=":"/></TextBlock>
-        <TextBox x:Name="nameOfSet" HorizontalAlignment="Left" Height="30" Margin="10,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" FontSize="20" RenderTransformOrigin="0.5,0.5" Text="&#xD;&#xA;" >
+        <TextBlock x:Name="errors2" HorizontalAlignment="Center" Height="31" Margin="0,397,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430"/>
+        <Button Content="Wykonaj" HorizontalAlignment="Center" Height="42" Margin="0,350,0,0" VerticalAlignment="Top" Width="430" Click="Button_Click" FontSize="20"/>
+        <TextBlock HorizontalAlignment="Center" Height="24" Margin="0,449,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430" FontSize="18"><Run Text="Sprawdź prz"/><Run Language="pl-pl" Text="y"/><Run Text="należność"/><Run Text=":"/></TextBlock>
+        <TextBox x:Name="nameOfSet" HorizontalAlignment="Left" Height="30" Margin="10,521,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="141" FontSize="20" RenderTransformOrigin="0.5,0.5" Text="&#xD;&#xA;" >
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -24,9 +24,9 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <TextBlock HorizontalAlignment="Left" Height="21" Margin="10,418,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="102" FontSize="16" Text="Nazwa zbioru:"/>
-        <TextBlock HorizontalAlignment="Left" Height="21" Margin="225,418,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80" FontSize="16" Text="Argument:"/>
-        <TextBox x:Name="argument" HorizontalAlignment="Left" Height="30" Margin="225,444,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" FontSize="20" RenderTransformOrigin="0.5,0.5" >
+        <TextBlock HorizontalAlignment="Left" Height="21" Margin="10,495,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="102" FontSize="16" Text="Nazwa zbioru:"/>
+        <TextBlock HorizontalAlignment="Left" Height="21" Margin="225,495,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="80" FontSize="16" Text="Argument:"/>
+        <TextBox x:Name="argument" HorizontalAlignment="Left" Height="30" Margin="225,521,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="139" FontSize="20" RenderTransformOrigin="0.5,0.5" >
             <TextBox.RenderTransform>
                 <TransformGroup>
                     <ScaleTransform ScaleX="1"/>
@@ -36,7 +36,18 @@
                 </TransformGroup>
             </TextBox.RenderTransform>
         </TextBox>
-        <Button Content="Oblicz przynależność" HorizontalAlignment="Center" Height="42" Margin="0,490,0,0" VerticalAlignment="Top" Width="430" Click="Button_Click2" FontSize="20"/>
-        <TextBlock x:Name="errors3" HorizontalAlignment="Center" Height="31" Margin="0,544,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430"/>
+        <Button Content="Oblicz przynależność" HorizontalAlignment="Center" Height="42" Margin="0,567,0,0" VerticalAlignment="Top" Width="430" Click="Button_Click2" FontSize="20"/>
+        <TextBlock x:Name="errors3" HorizontalAlignment="Center" Height="31" Margin="0,621,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="430"/>
+        <TextBox x:Name="discretization" HorizontalAlignment="Left" Height="30" Margin="130,301,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="88" FontSize="20" RenderTransformOrigin="0.5,0.5" >
+            <TextBox.RenderTransform>
+                <TransformGroup>
+                    <ScaleTransform ScaleX="1"/>
+                    <SkewTransform/>
+                    <RotateTransform/>
+                    <TranslateTransform/>
+                </TransformGroup>
+            </TextBox.RenderTransform>
+        </TextBox>
+        <TextBlock HorizontalAlignment="Left" Height="31" Margin="10,300,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="115" FontSize="18"><Run Language="pl-pl" Text="Dyskretyzacja"/><Run Text=":"/></TextBlock>
     </Grid>
 </Window>
