--- a/zadanie_rozmyte/MainWindow.xaml
+++ b/zadanie_rozmyte/MainWindow.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:zadanie_rozmyte"
         mc:Ignorable="d"
-        Title="MainWindow" Height="482" Width="450" Background="#FF151515">
+        Title="MainWindow" Height="657" Width="450" Background="#FF151515">
     <Grid>
         <StackPanel>
             <TextBlock Height="40"  TextWrapping="Wrap" Width="400" FontSize="30" TextAlignment="Center" Margin="0,30,0,15" Foreground="White"><Run Language="pl-pl" Text="Dodaj nową liczbę rozmytą:"/></TextBlock>
@@ -16,6 +16,10 @@
             <WrapPanel Height="30" HorizontalAlignment="Center" Margin="0,15,0,15">
                 <TextBlock Height="30" TextWrapping="Wrap" Width="170" FontSize="20" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" ><Run Language="pl-pl" Text="Nazwa:"/></TextBlock>
                 <TextBox x:Name="number_name" Height="30"  TextWrapping="Wrap" Width="150" FontSize="20" RenderTransformOrigin="0.5,0.5" BorderBrush="White" BorderThickness="2,2,2,2" Background="#FF151515" Foreground="White" />
+            </WrapPanel>
+            <WrapPanel Height="30" HorizontalAlignment="Center" Margin="0,15,0,15">
+                <TextBlock Height="30" TextWrapping="Wrap" Width="170" FontSize="20" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" ><Run Language="pl-pl" Text="Dyskretyzacja"/><Run Text=":"/></TextBlock>
+                <TextBox x:Name="discretization" Height="30"  TextWrapping="Wrap" Width="150" FontSize="20" BorderBrush="White" BorderThickness="2,2,2,2" Background="#FF151515" Foreground="White" Text="1" />
             </WrapPanel>
             <Button Content="Dodaj" Height="50" Width="250" Click="Button_Click" FontSize="24" Margin="0,20,0,20" Background="White" Foreground="#FF151515" BorderBrush="White"/>
             <TextBlock x:Name="errors" Height="55" TextWrapping="Wrap" Width="400" FontSize="20" TextAlignment="Justify" Foreground="White" FontWeight="Bold" />
