--- a/zadanie_rozmyte/Liczby.xaml
+++ b/zadanie_rozmyte/Liczby.xaml
@@ -4,20 +4,31 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:zadanie_rozmyte"
+        xmlns:chart="clr-namespace:Syncfusion.UI.Xaml.Charts;assembly=Syncfusion.SfChart.WPF"
         mc:Ignorable="d"
-        Title="Liczby" Height="1016" Width="1188" Background="#FF151515">
+        Title="Liczby" Height="846" Width="1188" Background="#FF151515">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition />
             <ColumnDefinition Width="2" />
             <ColumnDefinition Width="2*" />
         </Grid.ColumnDefinitions>
-        <StackPanel x:Name="viewerBox" Grid.Column="2"/>
+        <StackPanel x:Name="viewerBox" Grid.Column="1" Grid.ColumnSpan="2" Margin="2,0,0,312" Background="#ffffff" />
+        <StackPanel  Grid.Column="1" Grid.ColumnSpan="2" Margin="2,518,0,10" Background="#ffffff">
+            <chart:SfChart x:Name="chart" Width="720" Height="274">
+                <chart:SfChart.PrimaryAxis>
+                    <chart:NumericalAxis />
+                </chart:SfChart.PrimaryAxis>
+                <chart:SfChart.SecondaryAxis >
+                    <chart:NumericalAxis Minimum="0" Maximum="1" Interval="0.1"/>
+                </chart:SfChart.SecondaryAxis>
+            </chart:SfChart>
+        </StackPanel>
         <TextBlock Width="2" Background="#FF404040" Grid.ColumnSpan="2" Margin="395,40,0,10" />
         <StackPanel>
             <StackPanel Margin="0,0,0,19" >
                 <TextBlock Height="40"  TextWrapping="Wrap" Width="400" FontSize="30" TextAlignment="Center" Margin="0,30,0,15" Foreground="White"><Run Language="pl-pl" Text="Wpisz działanie:"/></TextBlock>
-                <TextBox x:Name="operation" Height="270"  TextWrapping="Wrap" Width="375" FontSize="34" BorderBrush="White" BorderThickness="2,2,2,2" Background="#FF151515" Foreground="White" />
+                <TextBox x:Name="operation" Height="160"  TextWrapping="Wrap" Width="375" FontSize="34" BorderBrush="White" BorderThickness="2,2,2,2" Background="#FF151515" Foreground="White" />
                 <WrapPanel Height="30" HorizontalAlignment="Center" Margin="0,15,0,15">
                     <TextBlock Height="30"  TextWrapping="Wrap" Width="170" FontSize="20" TextAlignment="Center" Foreground="White" HorizontalAlignment="Stretch" ><Run Language="pl-pl" Text="Nazwa zbioru:"/></TextBlock>
                     <TextBox x:Name="name" Height="30"  TextWrapping="Wrap" Width="150" FontSize="20" RenderTransformOrigin="0.5,0.5" BorderBrush="White" BorderThickness="2,2,2,2" Background="#FF151515" Foreground="White" />
